force-app/main/default/src/objects/echosign_dev1__Recipient_Template__c/echosign_dev1__Recipient_Template__c.object-meta.xml
<CustomObject>
    <customHelpPage>echosign_dev1__EchoSignUserGuide</customHelpPage>
    <label>Add Recipient</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Recipient Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Add Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>