force-app/main/default/src/objects/echosign_dev1__Recipient_Template__c/fields/echosign_dev1__Account_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Account_Contact_Role__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Contact Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>