force-app/main/default/src/objects/echosign_dev1__Recipient_Template__c/fields/echosign_dev1__Related_Recipient_Relationship__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Related_Recipient_Relationship__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Related Recipient Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>