force-app/main/default/src/objects/echosign_dev1__Recipient_Template__c/fields/echosign_dev1__Signer_Verification_Method__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Signer_Verification_Method__c</fullName>
    <label>Signer Verification Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Password</fullName>
            </value>
            <value>
                <fullName>KBA</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Government ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>